@@ -3651,6 +3651,15 @@ STR_6396    :Disable screensaver and monitor power saving
 STR_6397    :If checked, screensaver and other monitor power saving features will be inhibited while OpenRCT2 is running.
 STR_6398    :File contains unsupported ride types. Please update to a newer version of OpenRCT2.
 STR_6399    :OpenRCT2 needs files from the original RollerCoaster Tycoon 2 in order to work. Please set the “game_path” variable in config.ini to the directory where you installed RollerCoaster Tycoon 2, then restart OpenRCT2.
+STR_6400    :I have the GOG installer for RollerCoaster Tycoon 2 downloaded, but it is not installed
+STR_6401    :I have RollerCoaster Tycoon 2 installed already
+STR_6402    :OpenRCT2 Data Setup
+STR_6403    :Select which applies best to you
+STR_6404    :Please select GOG RollerCoaster Tycoon 2 installer
+STR_6405    :Select GOG Installer
+STR_6406    :GOG RollerCoaster Tycoon 2 Installer
+STR_6407    :This may take a few minutes
+STR_6408    :Please install innoextract to extract GOG Installer
 
 #############
 # Scenarios #
