@@ -36,6 +36,7 @@
 
 0.3.2 (2020-11-01)
 ------------------------------------------------------------------------
+- Feature: [#12307] For Linux users, allow extraction of GOG installer via innoextract.
 - Feature: [#12110] Add Hybrid Coaster (Rocky Mountain Construction I-Box) track type.
 - Feature: [#12999] .sea (RCT Classic) scenarios are now listed in the “New Scenario” dialog.
 - Feature: [#13000] objective_options command for console.
